fix: fix white space

--- a/services/web-app/layouts/layout/layout.module.scss
+++ b/services/web-app/layouts/layout/layout.module.scss
@@ -15,6 +15,7 @@
 .body {
   flex-grow: 1;
   padding-bottom: spacing.$spacing-13 + spacing.$spacing-07;
+  margin-left: -1px;
   background: theme.$background;
 }
 
